feat(poc): F7 A 路工具粒度细化 - 服务端风险过滤 + 列表精简投影
- CustomerProfileService.search 增加 riskLevel 参数：Cube 查询层过滤
  （dimension riskLevel + filter equals），替代旧 getHighRiskCustomers
  拉 200 行全量画像再客户端过滤——旧法浪费 token、暴露面大、
  客户数 >200 时静默截断漏数
- GET /api/v1/customers?riskLevel=high|medium|low（大小写归一化，非法值 400）
- 工具重构：getHighRiskCustomers 删除，新增 getCustomersByRisk(riskLevel, limit)
  （服务端过滤 + limit 1-200 边界钳制）
- 列表类工具（searchCustomersByLevel / getCustomersByRisk）精简投影 slim()：
  丢弃脱敏后无意义字段（phone/idCard/riskScore）与时间戳，7 个业务字段进 LLM，
  直接降上下文 token；单客户画像仍全量（脱敏演示是 A 路卖点）
- 63/63 测试（60 + 1 slim 投影 + 2 riskLevel 端点）